scroll to anchor with margin to avoid overlapping sticky header

--- a/app/assets/stylesheets/simple_calendar.scss
+++ b/app/assets/stylesheets/simple_calendar.scss
@@ -20,6 +20,10 @@
   min-width: 10em;
 }
 
+td.day {
+  scroll-margin-top: 2em;
+}
+
 td.today .card {
   border-color: $primary;
 }
